Issue #2222389 by Zarabadoo, rosemeria: Disable textarea resizing when the quickpost form is collapsed.

--- a/themes/commons/commons_origins/sass/global.styles.scss
+++ b/themes/commons/commons_origins/sass/global.styles.scss
@@ -3410,6 +3410,10 @@ body.page-node .pane-views-panes {
     .form-item {
       margin: 0;
     }
+
+    textarea {
+      resize: none;
+    }
   }
 
   .user-picture {
